<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="aboutus">About Us</string>
	<string name="action_settings">Settings</string>
	<string name="androidversion">Android Version:</string>
	<string name="app_name">Easy Reboot</string>
	<string name="automaticpoweroff">Automatic Powers off:</string>
	<string name="automaticreboot">Automatic reboots:</string>
	<string name="avvisomessaggio">If you have problems with the app, if you find some bugs or if you want to give us some suggestions for the app, contact us! :D Please if you can write in english.</string>
	<string name="batterylowalert">Battery Low Alert</string>
	<string name="becareful">Be careful!</string>
	<string name="checkboxdialog">Confirmation dialog in the application</string>
	<string name="close">Close</string>
	<string name="commandhint">Enter here your command</string>
	<string name="credits">Credits</string>
	<string name="creditschinesetranslation">Chinese (CN-HK-TW): hiapkangel</string>
	<string name="creditsczechtranslation">Czech: Radek PAVLE</string>
	<string name="creditsdutchtranslation">Dutch: MotoGUser69</string>
	<string name="creditsenglishtranslation">English: Me</string>
	<string name="creditsfrenchtranslation">French: MotoGUser69</string>
	<string name="creditsgermantranslation">German: AlbertC</string>
	<string name="creditsitaliantranslation">Italian: Me</string>
	<string name="creditspolishtranslation">Polish: seba112</string>
	<string name="creditsportuguesetranslation">Portuguese: TheFaveladoGamer</string>
	<string name="creditsrussiantranslation">Russian: iron86</string>
	<string name="creditsslovaktranslation">Slovak: MorcCrafak</string>
	<string name="creditsspanishtranslation">Spanish: Tinchossh and Sebastian Vargas</string>
	<string name="creditstranslation">Credits for translation</string>
	<string name="creditsukrainiantranslation">Ukrainian: iron86</string>
	<string name="creditsviettranslation">Vietnamese: Nguyen Anh Viet</string>
	<string name="csdescrizione">Be careful, it can be dangerous!</string>
	<string name="darkthemetx">Use Dark Theme</string>
	<string name="deviceinfo">Device:</string>
	<string name="disablebatteryalter">Disable battery alert</string>
	<string name="dismiss">Dismissed</string>
	<string name="dismiss2">Dismiss</string>
	<string name="donow">Do Now</string>
	<string name="error">Error</string>
	<string name="errorduringsched">An error occurred during the scheduler!</string>
	<string name="ex">Execute</string>
	<string name="extramore">Go to the extra section for do it later.</string>
	<string name="fbpage">Facebook Page</string>
	<string name="fbpagedes">If you want to be updated on all news about Easy Reboot, or you would like to receive support, follow the facebook page!</string>
	<string name="forceenglish">Force English Language</string>
	<string name="gotofile">Go to website</string>
	<string name="home">Home</string>
	<string name="info">Info</string>
	<string name="installbusybox">Install Busybox</string>
	<string name="lowbattery">Low Battery!</string>
	<string name="lowbattery1">You have</string>
	<string name="lowbattery2">of battery.</string>
	<string name="more">More</string>
	<string name="moveinfocard">Move the info card in the extra section</string>
	<string name="nbstats">Please Note: Total power on is a system stats, the others are app\'s stats.</string>
	<string name="nobusybox">You don\'t have busybox, some commands may not work</string>
	<string name="noroot">An error occurred, do you have the root access?</string>
	<string name="noroottx">No Root!</string>
	<string name="noticebeta">Please Note: This is still in beta, some things may not work and may be removed or added. Do not leave negative feedback for this!</string>
	<string name="notificationonboot">Notification on boot</string>
	<string name="notifpoweroff">The phone was powered off by Easy Reboot!</string>
	<string name="notifreboot">Phone successfully rebooted by Easy Reboot!</string>
	<string name="notifsoundcount">Notification sound before the countdown</string>
	<string name="notrootmsg">You DON\'T have the root access, this app won\'t work! Please don\'t rate it badly on the play store. If you don\'t know what is the root access you can uninstall this app, because is useless for you.</string>
	<string name="oknorootmsg">Ok, i understand</string>
	<string name="oursite">Our Site</string>
	<string name="rebootdownloadazione">Reboot Download</string>
	<string name="rebootdownloaddescrizione">Reboot your phone into Download Mode.</string>
	<string name="rebootdownloadtesto">Download Mode</string>
	<string name="rebootsafe">Safe Reboot</string>
	<string name="rebootuidescrizione">This will reboot your \"SystemUI.apk\". Could not work if you are using custom rom like MIUI.</string>
	<string name="rebootuitesto">Reboot SystemUI</string>
	<string name="rememberlater">Remember me</string>
	<string name="riavvioazione">Normal</string>
	<string name="riavviobootloaderazione">Reboot into Bootloader</string>
	<string name="riavviobootloaderdescrizione">This will reboot your device into bootloader mode.</string>
	<string name="riavviobootloadertesto">Reboot Bootloader</string>
	<string name="riavviodescrizione">This command wil simply restart your device, like when you power off and then power on again. Fast reboot bypass the hardware reboot. Safe reboot, reboot your phone only with the system apps, in case of you have problem with some apps that you have installed.</string>
	<string name="riavviorecoveryazione">Reboot Recovery</string>
	<string name="riavviorecoverydescrizione">This command will reboot your device into recovery mode. Incredible isn\'t it?</string>
	<string name="riavviorecoverytesto">Reboot Recovery</string>
	<string name="riavviosicuroazione">Safe</string>
	<string name="riavviosoftazione">Fast</string>
	<string name="riavviotesto">Reboot</string>
	<string name="root">Nope :(</string>
	<string name="rootaccess">Root Access:</string>
	<string name="rootaccessdenied">Root Access Denied!</string>
	<string name="rootgivenno">Denied!</string>
	<string name="rootgivenyes">Given!</string>
	<string name="rootinforma">Device Info</string>
	<string name="rootno">Nope :(</string>
	<string name="rootyes">Yep! :D</string>
	<string name="save">Save</string>
	<string name="scheduleaction">The action will happen in a minute!</string>
	<string name="scheduleconfirm1">Scheduled for</string>
	<string name="scheduleconfirm2">tomorrow at</string>
	<string name="scheduleconfirm3">today at</string>
	<string name="scheduleerror">Complete the scheduling correctly!</string>
	<string name="schedulingdes">Do something at certain time!</string>
	<string name="schedulingtitle">Scheduling</string>
	<string name="sendemail">Email Us</string>
	<string name="spegnidescrizione">This will power off your device.</string>
	<string name="spegnitesto">Power Off</string>
	<string name="stats">Stats</string>
	<string name="testooggettoemail">Email Us</string>
	<string name="testotraduzione">Easy Reboot Translation</string>
	<string name="time">Time:</string>
	<string name="title_activity_custom_command">Custom Command</string>
	<string name="title_activity_extra">Extra</string>
	<string name="title_activity_main2">Fast Home</string>
	<string name="title_activity_widgetactivity">Widget</string>
	<string name="totalbootloaderreboot">Total bootloader reboots:</string>
	<string name="totaldownloadreboot">Total Download Reboots:</string>
	<string name="totalfastreboot">Total fast reboots:</string>
	<string name="totalpoweroff">Total Power off:</string>
	<string name="totalpoweron">Total power on:</string>
	<string name="totalreboot">Total reboots:</string>
	<string name="totalrecoveryreboot">Total recovery reboots:</string>
	<string name="totalsafereboot">Total safe reboots:</string>
	<string name="traduzionedescrizione">Anyone who wants to help me with the translations can go to this website and translate them. Thanks for support!</string>
	<string name="uninstall">Uninstall</string>
	<string name="wait8">Please wait 8 seconds.</string>
	<string name="whatdo">What do you want to do?</string>
	<string name="widget11settings">1x1 Widget Settings</string>
	<string name="widget11settingsdes">Display or hide the content of the 1x1 widget</string>
	<string name="widgetdownloadmodeconfirm">Are you sure you want to reboot your device in download mode?</string>
	<string name="widgetfastreboot">Fast Reboot</string>
	<string name="widgetnormalreboot">Normal Reboot</string>
	<string name="widgetpoweroffconfirm">Are you sure you want to power off your device?</string>
	<string name="widgetrebootbootloaderconfirm">Are you sure you want to reboot your device in bootloader mode?</string>
	<string name="widgetrebootfastconfirm">Are you sure you want to reboot your device with the fast mode?</string>
	<string name="widgetrebootnormalconfirm">Are you sure you want to reboot your device?</string>
	<string name="widgetrebootrecoveryconfirm">Are you sure you want to reboot your device in Recovery Mode?</string>
	<string name="widgetsafereboot">Safe Reboot</string>
	<string name="widgetsaferebootconfirm">Are you sure you want to reboot your device in Safe Mode?</string>
	<string name="xdathread">XDA Thread</string>
</resources>